# PaperFlux

./: .env  README.md  app.py  pyproject.toml  requirements.txt
paperflux/: main.py
paperflux/src/: app.py  scheduler.py  tasks.py
paperflux/src/config/: settings.py
paperflux/src/models/: paper.py
paperflux/src/scheduler/: jobs.py
paperflux/src/services/: database.py  paper_analyzer.py  paper_fetcher.py  paper_processor.py  scheduler.py
paperflux/src/web/: app.py
tests/: README.md  api_test.py  pdf_workflow_test.py
